--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -1,12 +1,13 @@
-photos<!doctype HTML>
+{%load static%}
+<!doctype HTML>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>X-Oklahoma Photo</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'photos/css/bootstrap.min.css' %}" >
-        <link rel="stylesheet" href="{% static 'photos/css/custom.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/custom.css' %}" >
     </head>
     <body>
 
@@ -18,7 +19,7 @@ photos<!doctype HTML>
         </nav>
 
         <div class="welcome">
-            <h1 class="my-4 text-center text-lg-left">X-Okalahoma photo photos</h1>
+            <h1 class="my-4 text-center text-lg-left">X-Okalhoma photo photos</h1>
             <p class="my-4 text-center text-lg-left">Welcome to our photos website</p>
         </div>
         <!-- Main Section -->
@@ -46,14 +47,14 @@ photos<!doctype HTML>
          <!-- Footer -->
         <footer class="py-5 bg-light">
           <div class="container">
-          
+
           </div>
           <!-- /.container -->
         </footer>
 
-        <script src="{% static 'photos/js/jquery.min.js' %}"></script>
-        <script src="{% static 'photos/js/popper.min.js' %}"></script>
-        <script src="{% static 'photos/js/bootstrap.min.js' %}"></script>
-        <script src="{% static 'photos/js/custom.js' %}"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'js/custom.js' %}"></script>
     </body>
 </html>
