--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -17,11 +17,21 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <div id="myBtnContainer">
-        <a class="navbar-brand" href="/photos/">X-Fakta Photography</a>
+        <a class="navbar-brand" href="/photos/">Funny-Bunny Gallery</a>
         <button class="btn active" onclick="filterSelection('all')"> Show all</button>
         <button class="btn" onclick="filterSelection('Foods')"> Foods</button>
         <button class="btn" onclick="filterSelection('Travel')"> Travel</button>
         <button class="btn" onclick="filterSelection('Fashion')"> Fashion</button>
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Article" name="article">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+
+        </form>
       </div>
 
     </div>
@@ -39,7 +49,7 @@
     </div>
     <div class="column Fashion">
       <div class="content">
-        <img src="https://www.kenyabuzz.com/lifestyle/wp-content/uploads/2018/02/Sheila-Kanini.jpg" alt="Fashion" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWKlgvHqxusWAyF1RPvFzXaHcck34zb8wYKM-1YPniV-jIFOFOhw" alt="Fashion" style="width:100%">
         <h4>Woman</h4>
         <p>Lorem ipsum dolor..</p>
       </div>
@@ -76,7 +86,7 @@
     </div>
     <div class="column Fashion">
       <div class="content">
-        <img src="https://i.dailymail.co.uk/i/pix/2015/10/28/21/2DD80E1500000578-3294113-Kenyan_face_of_Topshop_Malaika_Firth_has_a_waist_to_height_ratio-a-62_1446067691404.jpg" alt="Fashion" style="width:100%">
+        <img src="https://fashionista.com/.image/c_fit%2Ccs_srgb%2Cfl_progressive%2Ch_406%2Cq_auto:good%2Cw_620/MTU0MTM0Njc1NDIwMzU3Nzky/14_rocio_1_gettyimages-922968126.jpg" alt="Fashion" style="width:100%">
         <h4>Man</h4>
         <p>Lorem ipsum dolor..</p>
       </div>
@@ -91,7 +101,7 @@
 
     <div class="column Fashion">
       <div class="content">
-        <img src="https://www.unicornmagazine.it/wp-content/uploads/2018/05/Le-21eme-Adam-Katz-Sinding-Luka-Sabbat-Paris-Mens-Fashion-Week-Fall-Winter-2017-2018_AKS8561-820x394.jpg" alt="Fashion" style="width:100%">
+        <img src="https://i.ebayimg.com/images/g/Z0AAAOSwL9tbdZCo/s-l300.jpg" alt="Fashion" style="width:100%">
         <h4>Girl</h4>
         <p>Lorem ipsum dolor..</p>
       </div>
