--- a/photos/templates/location.html
+++ b/photos/templates/location.html
@@ -1,19 +1,20 @@
+{% extends 'base.html' %}
 <!doctype HTML>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>X-Oklahoma Photo</title>
+        <title>Funny-Bunny Photo</title>
         {% load static %}
-        <link rel="stylesheet" href="{% static 'photos/css/bootstrap.min.css' %}" >
-        <link rel="stylesheet" href="{% static 'photos/css/custom.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" >
+        <link rel="stylesheet" href="{% static 'css/custom.css' %}" >
     </head>
     <body>
 
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
           <div class="container">
-            <a class="navbar-brand" href="/photos/">X-Okalahoma Photography</a>
+            <a class="navbar-brand" href="/photos/">Funny-Bunny Photography</a>
           </div>
         </nav>
 
