--- a/photos/templates/index.html
+++ b/photos/templates/index.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {%load static%}
+
 <!doctype HTML>
-<html>
+<html style="overflow-x:hidden;">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>X-Fakta Photo</title>
+  <title>Funny-Bunny Photography</title>
   {% load static %}
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/custom.css' %}">
@@ -15,35 +16,65 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <div id="myBtnContainer">
-        <a class="navbar-brand" href="/photos/">Funny-Bunny Gallery</a>
-        <button class="btn active" onclick="filterSelection('all')"> Show all</button>
-        <button class="btn" onclick="filterSelection('Foods')"> Foods</button>
-        <button class="btn" onclick="filterSelection('Travel')"> Travel</button>
-        <button class="btn" onclick="filterSelection('Fashion')"> Fashion</button>
-        <div align = "right" class="col-sm-4 col-md-4 navbar-right">
 
-          <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+  <h3>Some of our photos</h3>
+  {% block content %}
 
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search Topic" name="topic">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+
+
+    <h1 class="text-center">Funny-Bunny</h1>
+    <div class="row" style="margin-right: 0px;">
+
+      {% for photo in photos %}
+      <div class="col-md-4">
+        <img style="width: 100%; margin: 2px;" src="{{photo.photo.url}}" class="card-img-top img-fluid" alt="photo" data-toggle="modal" data-target="#{{photo.id}}">
+
+        <!-- photo Details modal -->
+
+        <div class="modal fade bd-example-modal-lg" id="{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="photoTitle" aria-hidden="true">
+          <div style="max-width:70%; max-height:50%; padding-top:100px;" class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="photoTitle">{{photo.name}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <img src="{{photo.photo.url}}" class="img-fluid" alt="photo" style="width:300px">
+                <br>
+                {{photo.description}}
+              </div>
+              <div class="modal-footer">
+                <input class="form-control input-lg" type="text" value="https://gallery-django.herokuapp.com{{photo.photo.url}}" id="{{photo.id}}-url">
+                <button class="btn btn-outline-info" onclick="copyUrl('{{photo.id}}-url')">Copy photo Url</button>
               </div>
             </div>
-
-          </form>
+          </div>
         </div>
       </div>
-
+      <script type="text/javascript">
+        function copyUrl(element) {
+          var myVar = document.getElementById(element)
+          myVar.select();
+          document.execCommand('copy')
+        }
+      </script>
+      {% empty %}
+      <h3 class="text-center">There are No photos</h3>
+      {% endfor %}
     </div>
-  </nav>
 
-  <h3>Some of our articles</h3>
+
+  {% endblock %}
+</body>
+
+</html>
+
+
+
   <!-- Portfolio Gallery Grid -->
-  <div class="row">
+  <!-- <div class="row">
     <div class="column Foods">
       <div class="content">
         <img src="https://www.ocf.berkeley.edu/~sather/wp-content/uploads/2018/01/food--1200x600.jpg" alt="Food" style="width:100%">
@@ -53,7 +84,7 @@
     </div>
     <div class="column Fashion">
       <div class="content">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSWKlgvHqxusWAyF1RPvFzXaHcck34zb8wYKM-1YPniV-jIFOFOhw" alt="Fashion" style="width:100%">
+        <img src="https://encrypted-tbn0.gstatic.com/photos?q=tbn:ANd9GcSWKlgvHqxusWAyF1RPvFzXaHcck34zb8wYKM-1YPniV-jIFOFOhw" alt="Fashion" style="width:100%">
         <h4>Woman</h4>
         <p>Lorem ipsum dolor..</p>
       </div>
@@ -112,22 +143,7 @@
     </div>
 
 
-    <!-- END GRID -->
-  </div>
-
-
-  <!-- Footer -->
-  <footer class="py-5 bg-light">
-    <div class="container">
-
-    </div>
-    <!-- /.container -->
-  </footer>
-
   <script src="{% static 'js/jquery.min.js' %}"></script>
   <script src="{% static 'js/popper.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/custom.js' %}"></script>
-</body>
-
-</html>
