--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,178 +1,10 @@
-@media only screen and (max-device-width: 1366px) {
-  .parallax {
-    background-attachment: scroll;
-  }
+*{
+  margin: 0;
 }
 
-.parallax {
-  background-image: url("https://i.ytimg.com/vi/mia28Dn_wwc/maxresdefault.jpg");
-  height: 500px;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
+.navbar{
+  width: 100%;
 }
-
-.bg-text {
-  background-color: rgb(0, 0, 0);
-  /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4);
-  /* Black w/opacity/see-through */
-  color: white;
-  font-weight: bold;
-  border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
-}
-
-body {
-  padding-top: 54px;
-  background-color: black;
-}
-
-@media (min-width: 992px) {
-  body {
-    padding-top: 56px;
-  }
-}
-
-div.row {
-  margin-top: 3%;
-}
-
-#imageDetail figure {
-  width: 500px;
-}
-
-img.img-thumbnail:hover {
-  box-shadow: 5px 5px 5px #888888;
-}
-
-.indexContent {
-  padding-top: 2%;
-  padding-bottom: 20%;
-}
-
-.topicContent {
-  padding-bottom: 20%;
-}
-
-.infoContent {
-  padding-bottom: 20%;
-  padding-top: 2%;
-}
-
-nav {
-  border-bottom: 1px solid #aaaaaa;
-}
-
-footer {
-  border-top: 1px solid #aaaaaa;
-}
-
-.btn-light {
-  border-color: #aaaaaa;
-}
-
-.btn-light:hover {
-  color: #111;
-  background-color: #fafafa;
-  border-color: #aaaaaa;
-  box-shadow: 1px 1px 1px #cccccc;
-}
-
-.welcome {
-  background-color: #f0f0f0;
-  padding-left: 9%;
-  padding-top: 2%;
-  border-bottom: 1px solid #cccccc;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: #f1f1f1;
-  padding: 20px;
-  font-family: Arial;
-}
-
-/* Center website */
-.main {
-  max-width: 1000px;
-  margin: auto;
-}
-
-h1 {
-  font-size: 50px;
-  word-break: break-all;
-}
-
-.row {
-  margin: 8px -16px;
-}
-
-/* Add padding BETWEEN each column (if you want) */
-.row,
-.row>.column {
-  padding: 8px;
-}
-
-/* Create three equal columns that floats next to each other */
-.column {
-  float: left;
-  width: 33.33%;
-  display: none;
-  /* Hide columns by default */
-}
-
-/* Clear floats after rows */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Content */
-.content {
-  background-color: white;
-  padding: 10px;
-}
-
-/* The "show" class is added to the filtered elements */
-.show {
-  display: block;
-}
-
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: white;
-  cursor: pointer;
-}
-
-/* Add a grey background color on mouse-over */
-.btn:hover {
-  background-color: #ddd;
-}
-
-/* Add a dark background color to the active button */
-.btn.active {
-  background-color: #666;
-  color: white;
-}
-
-footer {
-  background-color: black;
+html{
+  overflow-x: hidden;
 }
