--- a/photos/templates/search.html
+++ b/photos/templates/search.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
 
-  <div class="row">
+
     {% if photo %}
     <h2>Found {{ photo|length }} of searched term {{message}}</h2>
     {% else %}
@@ -11,34 +11,34 @@
 
   </div>
 
-  <div class="row">
+  <div class="row" style="margin-right: 0px; overflow:hidden;" >
 
-    {% if photo %}
+
     {% for photo in photos %}
+    <div class="col-md-4">
     <!-- <div class="col-sm-6 col-md-3">
       <h1>{{photo.name}}</h1>
     </div> -->
-    <div class="col-md-4">
-      <img style=" margin: 20px; width:100%;" src="{{photo.photo.url}}" class="img-fluid" alt="Image" data-toggle="modal" data-target="#{{photo.id}}">
+      <img style=" width:100%; margin: 20px;" src="{{photo.photo.url}}" alt="photo" data-toggle="modal" data-target="#{{photo.id}}">
       <!-- Image Details modal -->
 
       <div class="modal fade bd-example-modal-lg" id="{{photo.id}}" tabindex="-1" role="dialog" aria-labelledby="imageTitle" aria-hidden="true">
-        <div style="max-width:70%; max-height:50%; padding-top:100px;" class="modal-dialog modal-dialog-centered" role="document">
+        <div style="width:30%; max-height:50%; padding-top:100px;" class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="imageTitle">{{photo.name}}</h5>
+              <h5 class="modal-title" id="photoTitle">{{photo.name}}</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              <img src="{{photo.photo.url}}" class="img-fluid" alt="Image">
+              <img src="{{photo.photo.url}}" class="img-fluid" alt="Image" style="width:100%">
               <br>
               {{photo.description}}
             </div>
             <div class="modal-footer">
               <input class="form-control input-lg" type="text" value="https://gallery-django.herokuapp.com{{photo.photo.url}}" id="{{photo.id}}-url">
-          <button class="btn btn-outline-info" onclick="copyUrl('{{photo.id}}-url')">Copy Image Url</button>
+              <button align="center" class="btn  btn-outline-info" onclick="copyUrl('{{photo.id}}-url')">Copy Image Url</button>
             </div>
           </div>
         </div>
@@ -51,7 +51,7 @@
         }
       </script>
       {% endfor %}
-      {% endif %}
+
     </div>
   </div>
 
